[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/ui/slot_machine_nine_patch_border.png" type="Texture" id=1]
[ext_resource path="res://component_scenes/slot_machine/slot_machine.gd" type="Script" id=2]
[ext_resource path="res://resources/equipment/test.tres" type="Resource" id=3]
[ext_resource path="res://component_scenes/slot_machine/frame.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/equipment/sword.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/slot_machine_nine_patch_background.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.92549, 0.839216, 0.156863 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.815686, 0.505882, 0.34902, 0.156863 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.92549, 0.839216, 0.117647 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.815686, 0.505882, 0.34902, 0.156863 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="SlotMachine" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
equipment = ExtResource( 3 )
frame_scene = ExtResource( 4 )

[node name="SlotMachineBackground" type="NinePatchRect" parent="."]
margin_right = 270.0
margin_bottom = 70.0
rect_min_size = Vector2( 318, 70 )
texture = ExtResource( 6 )
patch_margin_left = 80
patch_margin_top = 3
patch_margin_right = 58
patch_margin_bottom = 3

[node name="FramesContainer" type="HBoxContainer" parent="."]
margin_left = 95.0
margin_top = 8.0
margin_right = 239.0
margin_bottom = 56.0
rect_min_size = Vector2( 144, 48 )
custom_constants/separation = 2
alignment = 1

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 70.0
margin_top = 64.0
margin_right = 270.0
margin_bottom = 68.0
value = 50.0

[node name="EquipmentIcon" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="SlotMachineButton" type="Button" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 69.0
margin_bottom = 68.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )

[node name="ExecuteResultsButton" type="Button" parent="."]
margin_left = 271.0
margin_top = 2.0
margin_right = 316.0
margin_bottom = 62.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 5 )

[node name="SlotMachineBorder" type="NinePatchRect" parent="."]
margin_right = 270.0
margin_bottom = 70.0
rect_min_size = Vector2( 318, 70 )
texture = ExtResource( 1 )
patch_margin_left = 80
patch_margin_top = 3
patch_margin_right = 58
patch_margin_bottom = 3

[node name="FullDisabler" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="FullDisabler"]
margin_right = 71.0
margin_bottom = 70.0
color = Color( 0.0156863, 0.0509804, 0.0784314, 0.470588 )

[node name="ColorRect2" type="ColorRect" parent="FullDisabler"]
margin_left = 71.0
margin_right = 318.0
margin_bottom = 64.0
color = Color( 0.0156863, 0.0509804, 0.0784314, 0.470588 )

[node name="UsedDisabler" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UsedDisabler"]
margin_right = 71.0
margin_bottom = 70.0
color = Color( 0.0156863, 0.0509804, 0.0784314, 0.470588 )

[node name="ColorRect2" type="ColorRect" parent="UsedDisabler"]
margin_left = 71.0
margin_right = 318.0
margin_bottom = 64.0
color = Color( 0.0156863, 0.0509804, 0.0784314, 0.470588 )

[node name="EnemyDisabler" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="EnemyDisabler"]
margin_right = 71.0
margin_bottom = 70.0
color = Color( 0.2, 0.14902, 0.172549, 0.470588 )

[node name="ColorRect2" type="ColorRect" parent="EnemyDisabler"]
margin_left = 71.0
margin_right = 318.0
margin_bottom = 64.0
color = Color( 0.2, 0.14902, 0.172549, 0.470588 )

[connection signal="pressed" from="SlotMachineButton" to="." method="_on_SlotMachineButton_pressed"]
[connection signal="pressed" from="ExecuteResultsButton" to="." method="_on_ExecuteResultsButton_pressed"]
